--- a/RegDateSystem/WebContent/calendar.css
+++ b/RegDateSystem/WebContent/calendar.css
@@ -4,18 +4,20 @@
 
 .nav_btn {
 	border: 0;
-	text-align: center;
+	outline: 0; text-align : center;
 	font-size: 150%;
 	color: white;
 	background-color: transparent;
+	text-align: center;
 }
 
 .nav_btn:hover {
+	cursor: pointer;
 	color: grey;
 }
 
 .nav_btn:active {
-	
+	outline: 0;
 }
 
 #calendar_table {
@@ -84,10 +86,10 @@
 }
 
 .main_div {
-	border:0;
+	border: 0;
 	margin: 0;
-	width:100%;
-	height:100%;
+	width: 100%;
+	height: 100%;
 	display: inline-block;
 	background: #222222;
 }
